--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "jquery": "^3.4.1",
+    "konva": "^4.2.0",
+    "popper.js": "^1.16.1",
+    "vue": "^2.6.11",
+    "vue-konva": "^2.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
